--- a/cmd/server/config.yaml
+++ b/cmd/server/config.yaml
@@ -1,6 +1,7 @@
 port: 7000
 max_cache_size: 1000
 role: leader
+leader_addr: localhost:7001
 aof_file: cache.aof
 snapshot_file: cache.rdb
 sync_policy: SyncEverySecond
