--- a/cmd/configs/config-node1.yaml
+++ b/cmd/configs/config-node1.yaml
@@ -1,10 +1,10 @@
-# node 3 configuration
-node_id: "node3"
+# node 1 configuration
+node_id: "node1"
 
 # cache settings
 max_cache_size: 1000
-aof_file: "data/node3-cache.aof"
-snapshot_file: "data/node3-cache.rdb"
+aof_file: "cmd/data/node1-cache.aof"
+snapshot_file: "cmd/data/node1-cache.rdb"
 sync_policy: "everysecond"
 snapshot_interval_seconds: 300
 growth_factor: 2
@@ -13,18 +13,18 @@ growth_factor: 2
 nodes:
   - id: "node1"
     host: "localhost"
-    port: 6379         # redis clients connect here
-    repl_port: 7379    # other nodes connect here for replication
+    port: 8379         # redis clients connect here
+    repl_port: 8479    # other nodes connect here for replication
     priority: 3        # highest priority = becomes leader first
 
   - id: "node2"
     host: "localhost"
-    port: 6380
-    repl_port: 7380
+    port: 8380
+    repl_port: 8480
     priority: 2
 
   - id: "node3"
     host: "localhost"  
-    port: 6381
-    repl_port: 7381
+    port: 8381
+    repl_port: 8481
     priority: 1
