add log_level to configs

--- a/cmd/configs/config-node3.yaml
+++ b/cmd/configs/config-node3.yaml
@@ -2,7 +2,10 @@
 node_id: "node3"
 port: 8381
 repl_port: 9381
+
+# metrics and logging
 metrics_port: 9092
+log_level: "info"
 
 # cache settings
 max_cache_size: 1000
