--- a/cmd/configs/config-node1.yaml
+++ b/cmd/configs/config-node1.yaml
@@ -2,7 +2,10 @@
 node_id: "node1"
 port: 8379
 repl_port: 9379
+
+# metrics and logging
 metrics_port: 9090
+log_level: "info"
 
 # cache settings
 max_cache_size: 1000
