--- a/cmd/configs/config-node2.yaml
+++ b/cmd/configs/config-node2.yaml
@@ -2,7 +2,10 @@
 node_id: "node2"
 port: 8380
 repl_port: 9380
+
+# metrics and logging
 metrics_port: 9091
+log_level: "info"
 
 # cache settings
 max_cache_size: 1000
